# kaccess

kaccess/: Makefile  dbwindow.cpp  dbwindow.h  dialogs.cpp  dialogs.h  kaccess.pro  main.cpp  mainwindow.cpp  mainwindow.h  objlistview.cpp  objlistview.h  tabledesigner.cpp  tabledesigner.h  tableeditor.cpp  tableeditor.h  tablemodel.cpp  tablemodel.h  triplet.h  widgets.cpp  widgets.h
kaccess-gtk/: .in  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.in
kaccess-gtk/autom4te.cache/: output.0  requests  traces.0  traces.1
kaccess-gtk/config/: config.guess  config.sub  depcomp  install-sh  missing
kaccess-gtk/src/: Doxyfile  KAccess.kdevelop  Makefile  Makefile.am  Makefile.in  buttons.h  dbtreeview.cpp  dbtreeview.h  dbwindow.cpp  dbwindow.h  kaccess  kaccess.cpp  mainwindow.cpp  mainwindow.h  triplelist.h  triplet.h  utilities.cpp  utilities.h
kaccess-gtk/src/.deps/: kaccess.Po  mainwindow.Po
kaccess-gtk/src/icons/: design_report.xpm  new_form.xpm  open_generic.xpm  remove_table.xpm
kaccess-gtk/src/tabledesigner/: cellrendererdatetime.h  cellrenderernumeric.h  cellrendererstring.h  cellrenderertable.h  designertreeview.cpp  designertreeview.h  tabledesigner.cpp  tabledesigner.h  tablemodel.cpp  tablemodel.h  tableviewer.cpp  tableviewer.h
kaccess-qt4/: LICENSE  kaccess-qt4.kdevelop  kaccess-qt4.pro
kaccess-qt4/src/: dbwindow.cpp  dbwindow.h  dialogs.cpp  dialogs.h  kaccess.cpp  mainwindow.cpp  mainwindow.h
kaccess-qt4/src/images/: kaccess.xpm
kaccess-qt4/templates/: cpp
kaccess/icons/: design_form.xpm  design_table.xpm  insert_row.xpm  new_generic24.xpm  new_report.xpm  new_table.xpm  open_generic24.xpm  primary_key.xpm  save_as_generic24.xpm  save_generic24.xpm  small_logo.xpm  splash.xpm
kaccess/tabledesigner/: currencyfieldeditor.cpp  currencyfieldeditor.h  designertable.cpp  designertable.h  dtfieldeditor.cpp  dtfieldeditor.h  fieldeditor.cpp  fieldeditor.h  memofieldeditor.cpp  memofieldeditor.h  numberfieldeditor.cpp  numberfieldeditor.h  tabledesigner.cpp  tabledesigner.h  tableeditor.cpp  textfieldeditor.cpp  textfieldeditor.h  ynfieldeditor.cpp  ynfieldeditor.h
