dnl Run this file with autoconf
AC_INIT(src/kaccess.cpp)

AC_CONFIG_SRCDIR([src/kaccess.cpp])

dnl the config directory
AC_CONFIG_AUX_DIR(config)

dnl our app and version
AM_INIT_AUTOMAKE(kaccess,1.0)

dnl check for pkg-config modules
PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= 2.4.0, , AC_MSG_ERROR([GTKmm >= 2.4.0 was not found. You need this library to compile!]))

dnl other macros
AC_LANG_CPLUSPLUS

AC_EXEEXT

AC_OBJEXT

AC_PROG_CC

AC_PROG_CXX

AC_PROG_INSTALL

dnl the output
AC_OUTPUT(Makefile src/Makefile)
